Bug 452798 attachment 336437: Make the CC list visible by default again, and in addition, allow it to be searchable with find-as-you-type search.

--- a/skins/standard/show_bug.css
+++ b/skins/standard/show_bug.css
@@ -84,3 +84,20 @@
     _position:absolute; /* abs pos needed for ie quirks */
 }
 
+.cc_list_display {
+    list-style: none;
+    margin:0px;
+    padding:5px;
+    padding-right:20px;
+    height:100px;
+    overflow:auto;
+    float:left;
+    max-width:465px;
+    border:1px solid #CCC;
+}
+
+.cc_list_display li {
+    margin:0px;
+    padding:0px;
+    white-space:nowrap;
+}   
